Fix z-index order

--- a/src/assets/scss/blocks/_skill.scss
+++ b/src/assets/scss/blocks/_skill.scss
@@ -32,7 +32,7 @@
 			width: 400px;
 			height: 400px;
 			transform: translate(-50%, -50%);
-			z-index: $base-z-index;
+			z-index: $skill-gradient-z-index;
 		}
 	}
 
@@ -40,7 +40,7 @@
 	&__items {
 		flex-grow: 1;
 		pointer-events: none;
-		z-index: $base-z-index;
+		z-index: $skill-text-z-index;
 	}
 
 	&__item + &__item {
